# avtget

./: .gitattributes  .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
backend/: channel_scrape_bridge.py  requirements.txt  transcript_clean_bridge.py  video_metadata_bridge.py  whisper_bridge.py
backend/avtget_core/: __init__.py  avtget.py  transcript_cleaner.py  types.py
backend/avtget_core/references/: ai_terminology.md  bleach_terminology.md  dnd_terminology.md  (+3 more)
firefox-extension/: .amo-upload-uuid  background.js  manifest.json  options.html  options.js  popup.html  popup.js
rust/: Cargo.toml
rust/crates/backend/: Cargo.toml
rust/crates/backend/src/: cancel.rs  cli.rs  events.rs  main.rs  ollama.rs  postprocess.rs
rust/crates/backend/src/adapters/: channel_scrape_bridge.rs  ffmpeg.rs  mod.rs  orchestrated_backend.rs  temp_storage.rs  transcript_clean_bridge.rs  video_metadata_bridge.rs  whisper_bridge.rs  ytdlp.rs
rust/crates/backend/src/orchestration/: local_media.rs  mod.rs  non_local.rs  routing.rs
rust/crates/backend/src/pipeline/: mod.rs
rust/crates/config/: Cargo.toml
rust/crates/config/src/: lib.rs
rust/crates/domain/: Cargo.toml
rust/crates/domain/src/: error.rs  event.rs  job.rs  lib.rs  pipeline.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/renderer/: App.tsx  desktopApi.ts  desktopApiTauri.ts  externalSubmit.ts  index.css  index.html  jobDispatch.ts  window.d.ts
src/shared/: types.ts
(+19 files in other folders)
