[workspace]
members = [
  "crates/domain",
  "crates/config",
  "crates/backend",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
clap = { version = "4.5.31", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
csv = "1.3.1"
ureq = { version = "2", features = ["json"] }
tiktoken-rs = "0.11"
