[package]
name = "avtget-tauri"
version = "1.0.0"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15.4"
open = "5.3.2"
tiny_http = "0.12"
getrandom = "0.2"
